tests/negative/constant_overflow.c
int values[2147483647 + 1];
int main(void) { return 0; }
